Fix ui when group collapsed

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -11,9 +11,9 @@ html {
 body {
     margin: 0 auto;
     padding: 0;
-  font-family: 'Figtree', 'Roboto', sans-serif;
+    font-family: 'Figtree', 'Roboto', sans-serif;
     color: #323338;
-    overflow: hidden;
+    // overflow: hidden;
 
 }
 
