--- a/src/assets/styles/cmps/GroupHeader.scss
+++ b/src/assets/styles/cmps/GroupHeader.scss
@@ -289,7 +289,7 @@
     font-size: 14px;
     display: grid;
     grid-template-columns: 97px 139px 139px 180px 139px 100px 150px auto;
-    margin-left: 194px;
+    margin-left: 101px;
 
     > div {
         display: flex;
